test_regress/t/t_tagged_case.out
%Error-UNSUPPORTED: t/t_tagged_case.v:24:17: Unsupported: tagged union
   24 |   typedef union tagged {
      |                 ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_case.v:25:5: Unsupported: void (for tagged unions)
   25 |     void Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:30:17: Unsupported: tagged union
   30 |   typedef union tagged packed {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:31:5: Unsupported: void (for tagged unions)
   31 |     void          Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:39:17: Unsupported: tagged union
   39 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:40:5: Unsupported: void (for tagged unions)
   40 |     void        Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:46:17: Unsupported: tagged union
   46 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:50:11: Unsupported: tagged union
   50 |     union tagged {
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:60:17: Unsupported: tagged union
   60 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:61:5: Unsupported: void (for tagged unions)
   61 |     void    Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:66:17: Unsupported: tagged union
   66 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:67:5: Unsupported: void (for tagged unions)
   67 |     void      Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:75:17: Unsupported: tagged union
   75 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:76:5: Unsupported: void (for tagged unions)
   76 |     void      Invalid;
      |     ^~~~
%Warning-SHORTREAL: t/t_tagged_case.v:78:5: Unsupported: shortreal being promoted to real (suggest use real instead)
   78 |     shortreal ShortRealVal;
      |     ^~~~~~~~~
                    ... For warning description see https://verilator.org/warn/SHORTREAL?v=latest
                    ... Use "/* verilator lint_off SHORTREAL */" and lint_on around source to disable this message.
%Error-UNSUPPORTED: t/t_tagged_case.v:82:17: Unsupported: tagged union
   82 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:83:5: Unsupported: void (for tagged unions)
   83 |     void   Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:88:17: Unsupported: tagged union
   88 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:89:5: Unsupported: void (for tagged unions)
   89 |     void  Invalid;
      |     ^~~~
%Error: t/t_tagged_case.v:109:9: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  109 |     v = tagged Invalid;
      |         ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged_case.v:112:7: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  112 |       tagged Invalid : result = 1;
      |       ^~~~~~
%Error: t/t_tagged_case.v:115:161: syntax error, unexpected while
  115 |     do if ((result) !== (1)) begin $write("%%Error: %s:%0d:  got=%0x exp=%0x (%s !== %s)\n", "t/t_tagged_case.v",115, (result), (1), "result", "1"); $stop; end while(0);;
      |                                                                                                                                                                 ^~~~~
%Error: t/t_tagged_case.v:118:7: syntax error, unexpected '=', expecting '('
  118 |     v = tagged Valid (123);
      |       ^
%Error: t/t_tagged_case.v:120:14: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  120 |     case (v) matches
      |              ^~~~~~~
%Error: t/t_tagged_case.v:127:8: syntax error, unexpected '=', expecting '('
  127 |     wt = tagged Wide60 (60'hFEDCBA987654321);
      |        ^
%Error: t/t_tagged_case.v:129:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  129 |     case (wt) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:137:8: syntax error, unexpected '=', expecting '('
  137 |     wt = tagged Wide90 (90'hDE_ADBEEFCA_FEBABE12_3456);
      |        ^
%Error: t/t_tagged_case.v:139:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  139 |     case (wt) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:147:8: syntax error, unexpected '=', expecting '('
  147 |     wt = tagged Byte8NonZeroLSB (8'hA5);
      |        ^
%Error: t/t_tagged_case.v:149:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  149 |     case (wt) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:156:8: syntax error, unexpected '=', expecting '('
  156 |     wt = tagged Word32LittleEndian (32'hDEADBEEF);
      |        ^
%Error: t/t_tagged_case.v:158:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  158 |     case (wt) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:165:8: syntax error, unexpected '=', expecting '('
  165 |     at = tagged Arr '{10, 20, 30, 40};
      |        ^
%Error: t/t_tagged_case.v:167:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  167 |     case (at) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:175:11: syntax error, unexpected '=', expecting '('
  175 |     instr = tagged Jmp (tagged JmpC '{2'd1, 10'd256});
      |           ^
%Error: t/t_tagged_case.v:177:18: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  177 |     case (instr) matches
      |                  ^~~~~~~
%Error: t/t_tagged_case.v:185:9: syntax error, unexpected '=', expecting '('
  185 |     cht = tagged Invalid;
      |         ^
%Error: t/t_tagged_case.v:187:16: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  187 |     case (cht) matches
      |                ^~~~~~~
%Error: t/t_tagged_case.v:194:9: syntax error, unexpected =-then-new, expecting '('
  194 |     obj = new(42);
      |         ^
%Error: t/t_tagged_case.v:197:16: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  197 |     case (clt) matches
      |                ^~~~~~~
%Error: t/t_tagged_case.v:204:8: syntax error, unexpected '=', expecting '('
  204 |     rt = tagged Invalid;
      |        ^
%Error: t/t_tagged_case.v:206:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  206 |     case (rt) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:213:8: syntax error, unexpected '=', expecting '('
  213 |     rt = tagged RealVal (3.14159);
      |        ^
%Error: t/t_tagged_case.v:215:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  215 |     case (rt) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:226:8: syntax error, unexpected '=', expecting '('
  226 |     rt = tagged ShortRealVal (2.5);
      |        ^
%Error: t/t_tagged_case.v:228:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  228 |     case (rt) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:239:8: syntax error, unexpected '=', expecting '('
  239 |     st = tagged Invalid;
      |        ^
%Error: t/t_tagged_case.v:241:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  241 |     case (st) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:247:8: syntax error, unexpected '=', expecting '('
  247 |     st = tagged StrVal ("hello");
      |        ^
%Error: t/t_tagged_case.v:249:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  249 |     case (st) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:259:8: syntax error, unexpected '=', expecting '('
  259 |     et = tagged Invalid;
      |        ^
%Error: Exiting due to
